# CountingWords

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp
include/: wordCounter.h
src/: wordCounter.cpp
